--- a/src/D2DropCalc.SPA/public/styles.css
+++ b/src/D2DropCalc.SPA/public/styles.css
@@ -1,7 +1,25 @@
 .is-diablo-red {
   background-color: #9C0000 !important;
+  max-width: none;
+}
+
+.site-navbar {
+  background-color: #9C0000 !important;
 }
 
 .site-title {
-  color: #000000
+  color: #000000 !important;
+  padding-top: 8px;
+}
+
+.background-grey {
+  background-color: #575656;
+}
+
+.navbar {
+  max-width: none;
+}
+
+html {
+  background-color: #575656 !important;
 }
